@@ -3,7 +3,7 @@
 # Provide a set of tests to excercise the control::rswitch command of
 # tcllib.
 #
-# @(#)$Id: rswitch.test,v 1.1 2001/11/03 01:11:28 patthoyts Exp $
+# @(#)$Id: rswitch.test,v 1.2 2001/11/03 04:10:43 dgp Exp $
 
 # Initialize the required packages
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -77,6 +77,52 @@ test rswitch-2.3 {switch string comparison} {
     catch {rs:compare "hello" "all"} result
     set result
 } {>}
+
+# -------------------------------------------------------------------------
+# Here are the test cases I used when developing [rswitch] to check on
+# its errorInfo management.  They should be converted to proper tests,
+# preferably checking ::errorInfo.  OK, I'll do the first one:
+
+test rswitch-3.0 {rswitch argument checking} {
+    [list [catch {rswitch 1 \{} msg] $msg $::errorInfo
+} {1 {unmatched open brace in list} {unmatched open brace in list
+    while executing
+"rswitch 1 \{"}}
+
+#rswitch {1 %s} {
+#        {{>[string length]}} {string length}
+#    }} msg] $msg]
+#}
+#rswitch 1 foo
+#rswitch {1 %s} {
+#	{{&& ([string length a]
+#	||
+#	[string length]}} {string length}
+#}
+#rswitch {1 %s} {
+#	{{&& ([string length a]
+#	||
+#	[string length])}} {string length}
+#}
+#rswitch {1 %s} {
+#	{{&& ([string length]
+#	||
+#	[string length])}} {string length}
+#}
+#rswitch {1 %s 1} {
+#    ==  {
+#	    set a 1
+#	    string length
+#	    set b 2
+#	}
+#}
+#rswitch {1 %s 1} {
+#    ==  {
+#	    set a 1
+#	    expr {[string length]}
+#	    set b 2
+#	}
+#}
 
 # -------------------------------------------------------------------------
 # Clean up the tests
